name:                draw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/draw#readme
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Point, Fractal
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable fractal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , draw
                     , gloss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/draw
